[tool.poetry]
name = "semiautorecon"
version = "1.0.0"
description = "A multi-threaded network reconnaissance tool which performs semi-automated enumeration of services."
authors = ["Tib3rius"]
license = "GNU GPL v3"
exclude = ["semiautorecon.py"]
packages = [
	{ include = "semiautorecon" },
]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.4"
colorama = "^0.4.4"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
semiautorecon = "semiautorecon.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
